Made changes in user search functionality